--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "3.4.0"
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
