--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-player": "^2.11.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^3.4.0"
   },
